Add more content and styling

--- a/index.html
+++ b/index.html
@@ -51,5 +51,24 @@
             </div>
         </div>
     </div>
+    <div class="quote-content">
+        <div class="quote">Here is an inspiring quote. Are you not inspired?</div>
+        <div class="quoter"> <div>-Baguette Man</div></div>
+
+    </div>
+    <div class="bottom-section"> 
+           <div class="cta">
+             <div class="text-container">
+             <div class="bold"> Call to action! Sign up!</div>
+             <div class="caption"> Sign up by clicking here! It's worth it. Loooots of text here. Really. </div>
+               </div>
+            <button id="button"> Sign up</button>
+        
+
+        </div>
+    </div>
+    <div class="footer"> 
+        <p class="footer-text"> The Odin Project</p>
+    </div>
 </body>
 </html>
